Menu overlap fixed

--- a/src/index.css
+++ b/src/index.css
@@ -11,14 +11,16 @@ img {
 .container-fluid {
   padding: 0 40px !important;
 }
-.expand-menu .dropdown-menu{
+.expand-menu .dropdown-menu.show{
   width: 400px;
   display: flex !important;
   flex-wrap: wrap;
   justify-content: flex-start;
 }
-.expand-menu .dropdown-menu .dropdown-item {
+.dropdown-menu .dropdown-item{
   padding: 0.5rem 1.5rem;
+}
+.expand-menu .dropdown-menu.show .dropdown-item{
   width: 50% !important;
 }
 /* .nav-item:hover .dropdown-menu{
